<resources>
    <string name="app_name">Notes</string>
    <string name="textviewDay">Day of the week:</string>
    <string name="hint_title">Title</string>
    <string name="description">Description</string>
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>
    <string name="save_note">Save note</string>
    <string name="warning_fill_fields">All fields should be filled</string>
    <string name="priority">Priority</string>
    <string-array name="days_of_the_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Sunday</item>
        <item>Saturday</item>
    </string-array>
</resources>